<resources>
    <string name="app_name">Escape the Earth!</string>
    <string name="angle_button_text">Update Angle</string>
    <string name="velocity_button_text">Update Velocity</string>
    <string name="angle_text">40.0</string>
    <string name="start_simulation">Start Simulation!</string>
    <string name="reset_simulation">Reset</string>
    <string name="velocity_text">1000</string>
    <string name="result"></string>
</resources>