<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <view
        class="com.example.escapetheearth.DrawView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/mainframe"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/updateBox"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/simulBox"
        app:layout_constraintLeft_toLeftOf="parent">
        <EditText
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:id="@+id/angleInput"
            android:text="@string/angle_text"
            android:textSize="11sp"
            android:inputType="numberDecimal"
            android:importantForAutofill="no" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/angleButton"
            android:text="@string/angle_button_text"
            android:textSize="11sp"
            android:onClick="updateAngle"/>
        <EditText
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:id="@+id/velocityInput"
            android:text="@string/velocity_text"
            android:textSize="11sp"
            android:inputType="numberDecimal"
            android:importantForAutofill="no" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/velocityButton"
            android:text="@string/velocity_button_text"
            android:textSize="11sp"
            android:onClick="updateVelocity"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/simulBox"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/start"
            android:text="@string/start_simulation"
            android:textSize="15sp"
            android:onClick="startClick"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reset"
            android:text="@string/reset_simulation"
            android:textSize="15sp"
            android:onClick="resetClick"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>